--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,6 +5,7 @@
         background-repeat: no-repeat;
         background-blend-mode: saturation;
         color: azure !important;
+        overflow-x: hidden;
     }
     
     .bg-dark .navbar {
@@ -13,6 +14,7 @@
     
     ul {
         list-style: none;
+        margin-left: 0px;
     }
     /* #region HEADER */
     
@@ -51,17 +53,20 @@
             }
         }
         .photo>img {
-            border-radius: 250px;
+            border-radius: 50%;
             box-shadow: 0 0 62px -1px #ccc;
             opacity: 0.9;
         }
         .photo>img:hover {
-            transform: scale(1.021);
+            animation: fadeZoomImg 0.2s both linear;
             opacity: 1;
         }
         .icon {
             width: 40px;
             gap: 2;
+        }
+        .icon:hover {
+            animation: fadeZoom 0.2s both linear
         }
     }
     
@@ -72,8 +77,8 @@
             width: 100%;
             .info {
                 width: 100%;
-                display: grid;
-                justify-content: space-between;
+                /* display: grid; */
+                /* justify-content: space-between; */
                 .info-list {
                     list-style: none;
                     display: flex;
@@ -83,12 +88,21 @@
                     }
                 }
             }
+            ul {
+                margin-left: 0 !important;
+            }
             .photo>img {
                 border-radius: 250px;
                 box-shadow: 0 0 62px -1px #ccc;
                 opacity: 0.9;
                 width: 75%;
             }
+        }
+    }
+    
+    @media screen and (max-width: 800px) {
+        section#home {
+            font-size: 1.5rem;
         }
     }
     /* #endregion */
@@ -127,6 +141,10 @@
     /* #endregion */
     /* #region skills */
     
+    .skill-logo:hover {
+        animation: fadeZoom 0.2s both linear
+    }
+    
     ul li {
         text-align: justify;
     }
@@ -140,7 +158,7 @@
     @media screen and (max-width: 400px) {
         section#experiences {}
     }
-    /* #endregions */
+    /* #endregion */
     
     .social button {
         width: 13%;
@@ -323,7 +341,7 @@
             height: 150px;
         }
         .tl-container .content {
-            width: 280px;
+            width: 250px;
         }
         #navMenu {
             top: 4.5rem
@@ -345,5 +363,23 @@
         }
         100% {
             transform: scale(1);
+        }
+    }
+    
+    @keyframes fadeZoom {
+        0% {
+            transform: scale(1);
+        }
+        100% {
+            transform: scale(1.25);
+        }
+    }
+    
+    @keyframes fadeZoomImg {
+        0% {
+            transform: scale(1);
+        }
+        100% {
+            transform: scale(1.1);
         }
     }
